--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu | front </title>
+    <link rel="stylesheet" href="./Css/style.css">
 </head>
 <body>
-    
+<!--header começo-->
+ <header>
+    <div class="left">
+        <h3>front <span>tecnologia</span></h3>
+    </div>
+    <div class="right">
+          <a href="#" class="sair_btn">Sair</a>
+    </div>
+ </header>
+<!--header final-->
+<!--sidebar começo-->
+    <div class="siderbar">
+        <center>
+            <img src="./img/imagem_inicio.jpeg" class="image" alt="">
+            <h2>Maria</h2>
+        </center>
+        <a href="#"><ion-icon name="desktop-outline"></ion-icon><span></span>
+            <a href="#"><ion-icon name="image-outline"></ion-icon><span></span>
+                <a href="#"><ion-icon name="calendar-clear-outline"></ion-icon><span></span>
+                    <a href="#"><ion-icon name="help-outline"></ion-icon><span></span>
+                        <a href="#"><ion-icon name="help-circle-outline"></ion-icon><span></span></a>
+    </div>
+    <!--sidebar final-->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
