--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="./Css/style.css">
 </head>
 <body>
+    <input type="checkbox" id="check">
 <!--header começo-->
  <header>
+    <label for="check"> 
+        <ion-icon name="menu-outline" id="siderbar"></ion-icon>
+    </label>
     <div class="left">
         <h3>front <span>tecnologia</span></h3>
     </div>
@@ -24,13 +28,14 @@
             <img src="./img/imagem_inicio.jpeg" class="image" alt="">
             <h2>Maria</h2>
         </center>
-        <a href="#"><ion-icon name="desktop-outline"></ion-icon><span></span>
-        <a href="#"><ion-icon name="image-outline"></ion-icon><span></span>
-        <a href="#"><ion-icon name="calendar-clear-outline"></ion-icon><span></span>
-        <a href="#"><ion-icon name="help-outline"></ion-icon><span></span>
-        <a href="#"><ion-icon name="help-circle-outline"></ion-icon><span></span></a>
+        <a href="#"><ion-icon name="desktop-outline"></ion-icon><span>Painel</span>
+        <a href="#"><ion-icon name="image-outline"></ion-icon><span>Fotos</span>
+        <a href="#"><ion-icon name="calendar-clear-outline"></ion-icon><span>Agenda</span>
+        <a href="#"><ion-icon name="help-outline"></ion-icon><span>Ajuda</span>
+        <a href="#"><ion-icon name="help-circle-outline"></ion-icon><span></span>Info</a>
     </div>
     <!--sidebar final-->
+    <div class="content"></div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
