--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
  </header>
 <!--header final-->
 <!--sidebar começo-->
-    <div class="siderbar">
+    <div class="sidebar">
         <center>
             <img src="./img/imagem_inicio.jpeg" class="image" alt="">
-            <h2>Maria</h2>
+            <h2>Barbearia</h2>
         </center>
         <a href="#"><ion-icon name="desktop-outline"></ion-icon><span>Painel</span>
         <a href="#"><ion-icon name="image-outline"></ion-icon><span>Fotos</span>
